hexschool summer camp 2021/hw1/style.css
.wrap {
    width: 1200px;
    margin: 0 auto;
}

.name {
    border-bottom: 1px solid black;
}

.name {
    padding-top: 40px;
    padding-bottom: 24px;
}

.name h1 {
    font-size: 80px;
    font-family: 'SF Pro text';
}

.picture {
    margin: 40px 0;
}

.title {
    font-size: 32px;
    font-weight: medium;
    font-family: 'PingFang TC';
    padding: 8px 0;
    border-bottom: 1px solid black;
    margin-bottom: 16px;
}

.title span {
    margin-left: 16px;
    color: #a00404;
    font-size: 24px;
    font-weight: 600;
    font-family: 'SF Pro text';
}

.profile p,
.education p {
    font-size: 24px;
    font-weight: 300;
    font-family: 'SF Pro text';
    margin: 6px 0;
}

.profile,
.education {
    padding-bottom: 64px;
}

.profile .content,
.education .content {
    margin-bottom: 24px;
}

.skills {
    background-color: #415165;
    color: white;
    padding: 24px 0;
    margin-top: 8px;
    margin-bottom: 64px;
}

.skills .title {
    text-align: center;
    width: 996px;
    border-bottom: 1px solid white;
    margin: 0 auto;
}

.skills span {
    color: white;
}

.skills .content {
    padding: 0 24px;
    border-left: 1px solid #96a9c4;
    width: 192px;
    margin: 40px auto;
}

.skills p {
    margin-bottom: 20px;
}

.experience .content {
    border-left: 1px solid #96a9c4;
    padding: 0 24px;
    margin-top: 16px;
    margin-left: 24px;
}

.item {
    margin-bottom: 32px;
    width: 642px;
}

.item .title,
.footer p {
    font-size: 24px;
    font-weight: medium;
    font-family: 'PingFang TC';
}

.item .title {
    border: none;
}

.education img {
    margin: 8px 0;
}

.item .description {
    line-height: 1.2;
    font-size: 20px;
    font-weight: 300;
    font-family: 'PingFang TC';
}

.footer {
    background-color: #415165;
    margin-top: 76px;
    padding: 16px 0;
    color: white;
}

.footer .title {
    width: 1200px;
    margin: 0 auto;
    margin-bottom: 32px;
    text-align: center;
    padding: 8px 0;
    border-bottom: 1px solid white;
}

.footer p {
    text-align: center;
    margin-bottom: 16px;
}

.footer span {
    color: white;
}

.link {
    margin-top: 20px;
    text-align: center;
}

.link img {
    margin: 0 24px;
}

